# amstel_design_tests

custom_iterators/: CMakeLists.txt  test_custom_iterators.cpp
map_iterators/: CMakeLists.txt  test_map_iterators.cpp
map_tuple_keys/: CMakeLists.txt  test_map_NxN.cpp  test_map_NxNxN.cpp
